fixes parallel not getting built on new CI tests
Signed-off-by: Skyler Clark <skylerjaneclark@gmail.com>

--- a/contrib/test/ci/system-packages.yml
+++ b/contrib/test/ci/system-packages.yml
@@ -5,8 +5,10 @@
 - name: Make sure we have all required packages
   yum:
     state: present
-    enablerepo: powertools
+    enablerepo: 
+      - powertools
     name:
+      - dnf-plugins-core
       #- atomic-registries
       - container-selinux
       - curl
