--- a/contrib/test/ci/test.yml
+++ b/contrib/test/ci/test.yml
@@ -54,7 +54,10 @@
 
 - block:
     - name: run integration tests
-      shell: make localintegration 2>&1 > /tmp/artifacts/testout.txt
+      shell: | 
+        set -eou pipefail
+        make localintegration 2>&1 > /tmp/artifacts/testout.txt
+      #shell: "make localintegration >& {{ crio_integration_userns_filepath }}"
       args:
         executable: /bin/bash
         chdir: "{{ ansible_env.GOPATH }}/src/github.com/cri-o/cri-o"
@@ -65,7 +68,10 @@
       poll: 30
 
     - name: run integration tests with userNS enabled + alternate results file
-      shell: make localintegration 2>&1 > /tmp/artifacts/testout_with_userns.txt
+      shell: | 
+        set -eou pipefail
+        make localintegration 2>&1 > /tmp/artifacts/testout_with_userns.txt
+      #shell: "make localintegration >& {{ crio_integration_userns_filepath }}"
       args:
         executable: /bin/bash
         chdir: "{{ ansible_env.GOPATH }}/src/github.com/cri-o/cri-o"
