--- a/contrib/test/ci/test.yml
+++ b/contrib/test/ci/test.yml
@@ -54,8 +54,9 @@
 
 - block:
     - name: run integration tests
-      shell: "make localintegration 2>&1 | tee /tmp/artifacts/testout.txt"
+      shell: make localintegration 2>&1 > /tmp/artifacts/testout.txt
       args:
+        executable: /bin/bash
         chdir: "{{ ansible_env.GOPATH }}/src/github.com/cri-o/cri-o"
       vars: 
         ansible_async_dir: '/tmp/artifacts/async'
@@ -64,9 +65,9 @@
       poll: 30
 
     - name: run integration tests with userNS enabled + alternate results file
-      shell: "make localintegration 2>&1 | tee /tmp/artifacts/testout.txt"
-      #shell: "make localintegration >& {{ crio_integration_userns_filepath }}"
+      shell: make localintegration 2>&1 > /tmp/artifacts/testout_with_userns.txt
       args:
+        executable: /bin/bash
         chdir: "{{ ansible_env.GOPATH }}/src/github.com/cri-o/cri-o"
       vars: 
         ansible_async_dir: '/tmp/artifacts/async'
