Add cached based name reservation error handling
We now allow up to 10 consecutive "name is reserved" errors within 10
minutes before CRI-O removes the container by itself. This allows
container being stuck in name reservation to be released so that the
kubelet can create them accordingly.

Signed-off-by: Sascha Grunert <sgrunert@redhat.com>

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -33,7 +33,7 @@ linters:
     - forcetypeassert
     - gochecknoinits
     - goconst
-    - gocritic
+    # - gocritic # TODO: enable when it supports go 1.18 and generics
     - gocyclo
     - gofmt
     - gofumpt
