--- a/contrib/test/ci/system.yml
+++ b/contrib/test/ci/system.yml
@@ -3,6 +3,7 @@
   include: system-packages.yml
 
 - name: ensure directories exist as needed
+  become: yes 
   file:
     path: "{{ item }}"
     state: directory
