--- a/contrib/test/ci/critest.yml
+++ b/contrib/test/ci/critest.yml
@@ -44,6 +44,7 @@
       webServerTestImage: {{ critest_mirror_repo }}/nginx:1.18
 
 - name: run critest validation
+  become: yes
   shell: "critest --report-dir={{ artifacts }} --runtime-endpoint unix:///var/run/crio/crio.sock --image-endpoint unix:///var/run/crio/crio.sock --ginkgo.flakeAttempts=3 --test-images-file=critest-images.yml"
   args:
     chdir: "{{ ansible_env.GOPATH }}/src/github.com/cri-o/cri-o"
