--- a/contrib/test/ci/e2e.yml
+++ b/contrib/test/ci/e2e.yml
@@ -3,13 +3,8 @@
 - name: include base e2e setup
   include: "e2e-base.yml"
 
-- name: Increase inotify user watches
-  sysctl:
-    name: fs.inotify.max_user_watches
-    state: present
-    value: 1048576
-
 - name: Buffer the e2e testing command to workaround Ansible YAML folding "feature"
+  become: yes
   vars:
     skip_tests:
       - "[Slow]"
@@ -23,6 +18,9 @@
       - "PersistentVolumes-local"
       - "CSI Volumes [Driver: csi-hostpath] [Testpattern: Dynamic PV (block volmode)] provisioning should provision storage with pvc data source"
       - "CSI Volumes [Driver: csi-hostpath] [Testpattern: Dynamic PV (block volmode)] volumes should store data"
+      - "[sig-apps] StatefulSet Basic StatefulSet functionality [StatefulSetBasic] should provide basic identity"
+      - "[sig-apps] StatefulSet Basic StatefulSet functionality [StatefulSetBasic] should not deadlock when a pod's predecessor fails" 
+      - "[sig-apps] StatefulSet Basic StatefulSet functionality [StatefulSetBasic] should adopt matching orphans and release non-matching pods" 
       # Started failing at https://github.com/kubernetes/kubernetes/pull/98587, and tests something out of the scope of CRI-O
       - "ServiceAccountIssuerDiscovery should support OIDC discovery of service account issuer"
       # While fully conformant kubernetes clusters require more than 2 nodes, verifying that CRI-O
@@ -43,8 +41,6 @@
 
 - name: run e2e tests
   shell: "{{ e2e_shell_cmd | regex_replace('\\s+', ' ') }}"
-  environment:
-    KUBECONFIG: /var/run/kubernetes/admin.kubeconfig
   args:
     chdir: "{{ ansible_env.GOPATH }}/src/k8s.io/kubernetes"
   async: '{{ 60 * 60 * 4 }}'  # seconds
