--- a/contrib/test/ci/e2e.yml
+++ b/contrib/test/ci/e2e.yml
@@ -3,13 +3,8 @@
 - name: include base e2e setup
   include: "e2e-base.yml"
 
-- name: Increase inotify user watches
-  sysctl:
-    name: fs.inotify.max_user_watches
-    state: present
-    value: 1048576
-
 - name: Buffer the e2e testing command to workaround Ansible YAML folding "feature"
+  become: yes
   vars:
     skip_tests:
       - "[Slow]"
@@ -41,11 +36,21 @@
                         --report-dir={{ artifacts }}"
             &> {{ artifacts }}/e2e.log
 
-- name: run e2e tests
-  shell: "{{ e2e_shell_cmd | regex_replace('\\s+', ' ') }}"
-  environment:
-    KUBECONFIG: /var/run/kubernetes/admin.kubeconfig
-  args:
-    chdir: "{{ ansible_env.GOPATH }}/src/k8s.io/kubernetes"
-  async: '{{ 60 * 60 * 4 }}'  # seconds
-  poll: 60
+
+- block:
+
+    - name: Disable selinux during e2e tests
+      command: 'setenforce 0'
+      when: not e2e_selinux_enabled
+
+    - name: run e2e tests
+      shell: "{{ e2e_shell_cmd | regex_replace('\\s+', ' ') }}"
+      args:
+        chdir: "{{ ansible_env.GOPATH }}/src/k8s.io/kubernetes"
+      async: '{{ 60 * 60 * 4 }}'  # seconds
+      poll: 60
+
+  always:
+
+    - name: Re-enable SELinux after e2e tests
+      command: 'setenforce 1'
