--- a/dependencies.yaml
+++ b/dependencies.yaml
@@ -10,6 +10,8 @@ dependencies:
       match: GO_VERSION
     - path: contrib/test/integration/main.yml
       match: version
+    - path: contrib/test/ci/setup.yml
+      match: version
 
   - name: golangci-lint
     version: v1.45.2
