--- a/contrib/test/ci/system-packages.yml
+++ b/contrib/test/ci/system-packages.yml
@@ -108,4 +108,4 @@
 
 - name: Update all packages RHEL 8, CentOS 8 and Fedora >= 30
   shell: sudo yum update -y
-  when: supports_python3 is defined and supports_python3 and (ansible_distribution != 'RedHat' and ansible_distribution_major_version|int != 9))
+  when: supports_python3 is defined and supports_python3 and (ansible_distribution != 'RedHat' and ansible_distribution_major_version|int != 9)
