Add conmon-rs e2e to ansible playbook
This adds the conmonrs installation as well as usage to the ansible
playbook, if the `USE_CONMONRS` environment variable is set to `true`.

Signed-off-by: Sascha Grunert <sgrunert@redhat.com>

--- a/contrib/test/ci/setup.yml
+++ b/contrib/test/ci/setup.yml
@@ -9,7 +9,7 @@
 
 - name: clone build and install cri-o
   include: "build/cri-o.yml"
-  
+
 - name: clone build and install bats
   include: "build/bats.yml"
 
@@ -40,6 +40,9 @@
 
 - name: install conmon
   include: "build/conmon.yml"
+
+- name: install conmon-rs
+  include: "build/conmon-rs.yml"
 
 - name: install jq
   include: "build/jq.yml"
