--- a/contrib/test/ci/vars.yml
+++ b/contrib/test/ci/vars.yml
@@ -10,6 +10,7 @@ build_runc: True
 build_crun: False
 build_kata: False
 cgroupv2: False
+use_conmonrs: '{{ USE_CONMONRS | default(False) | bool }}'
 
 critest_mirror_repo: quay.io/crio
 
@@ -20,7 +21,7 @@ crio_integration_userns_filepath: "{{ artifacts }}/testout_userns.txt"
 crio_node_e2e_filepath: "{{ artifacts }}/junit_01.xml"
 result_dest_basedir: '{{ lookup("env","WORKSPACE") |
                          default(playbook_dir, True) }}/artifacts'
-# Environment variables to set when executing e2e tests 
+# Environment variables to set when executing e2e tests
 e2e_test_env:
     KUBECONFIG: /var/run/kubernetes/admin.kubeconfig
 
